--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>salit portfolio</title>
-    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="style.css" <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>HELLO WORLD</h1>
+            <h1><span class="orange-color">WELCOME </span>TO MY SITE</h1>
+            <h3>fly in the sky for nothing</h3>
+            <p>ami ure jabo ure berabo kew dhorte parbe na.joyoi try koruk kono line nei....ami ekdom upore uitha gechi
+            </p>
+            <a class="link-button" target="blank" href="https://fonts.google.com/specimen/Otomanopee+One">catch me</a>
+        </div>
+        <div class="half-width">
+            <img src="my-bg.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
