--- a/index.html
+++ b/index.html
@@ -25,6 +25,17 @@
             <img src="my-bg.png" alt="">
         </div>
     </section>
+    <section class="big-dream">
+        <div class="half-width">
+            <img src="images/jhankar2.png">
+        </div>
+        <div class="half-width">
+            <h1>hakuna matata</h1>
+            <h2>kono pera nei chill</h2>
+            <p>eta sob cheye fachuki bepar je somoyer kaj somoye na korle pore puro bepartai fachuki hoye jai</p>
+            <a class="link-button" target="blank" href="https://fonts.google.com/specimen/Otomanopee+One">catch me">
+        </div>
+    </section>
 </body>
 
 </html>
